--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -23,9 +23,9 @@
     "slideshow_subheading_color": "#ffffff",
     "product_label_on_sale_background": "#ebbec7",
     "product_label_sold_out_background": "#b3b3b3",
-    "heading_font": "Google_Josefin+Sans",
+    "heading_font": "'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, 'AppleGothic', sans-serif",
     "page_title_font_size": "60px",
-    "text_font": "Google_Josefin+Sans",
+    "text_font": "'Avant Garde', Avantgarde, 'Century Gothic', CenturyGothic, 'AppleGothic', sans-serif",
     "slideshow_heading_font": "Google_Montserrat",
     "slideshow_heading_font_size": "60px",
     "slideshow_subheading_font": "Google_Montserrat",
@@ -43,9 +43,10 @@
     "container": "container-fluid",
     "full-widht-padding": "without-outer-padding",
     "collection-object-padding": "big-padding",
-    "navlink1_version": "multi",
-    "navlink1_heading1": "Flashsalge 30%",
-    "navlink1_heading2": "bis Montag",
+    "navlink1_version": "single",
+    "navlink1_image": "shopify:\/\/shop_images\/Screen_Shot_2021-10-07_at_14.40.46.png",
+    "navlink1_heading1": "",
+    "navlink1_heading2": "",
     "navlink1_sub1_image": "shopify:\/\/shop_images\/Screen_Shot_2021-10-07_at_14.49.48.png",
     "navlink1_sub2_image": "shopify:\/\/shop_images\/Screen_Shot_2021-10-07_at_14.41.31.png",
     "navlink1_sub3_image": "shopify:\/\/shop_images\/Photo_Aug_20_19_33_38_720x_fb40368c-aaef-4ebb-8e0a-0c1fde3e366d.jpg",
